# edu-redis

./: .gitignore  Cargo.toml  README.md
src/: handler.rs  lib.rs  main.rs  parser.rs
