[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = { version = "1.3.0", features = ["serde"] }                                     # helps manage buffers
memchr = "2.7.5"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-util = { version = "0.7.15", features = ["codec","net","io","time"] }
